tests/agl/rejections/type/discarded_non_unit_loop_body.agl
for x in [1] do
  1
()
